--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "dodai",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "bin": {
-    "zumen": "dist/bin/index.js"
+    "dodai": "dist/bin/index.js"
   },
   "files": [
     "dist"
@@ -46,6 +46,7 @@
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
