step rollup fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,43 @@
 {
     "compilerOptions": {
-      "target": "ESNext",
-      "module": "CommonJS",
+      "target": "ES5",
+      "module": "ESNext",
+      "allowJs": true,
+      "noEmit": true,
+      "isolatedModules": true,
+
+      "strict": true /* Enable all strict type-checking options. */,
+      "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
+      "strictNullChecks": true /* Enable strict null checks. */,
+      "strictFunctionTypes": true /* Enable strict checking of function types. */,
+      "strictBindCallApply": true /* Enable strict 'bind', 'call', and 'apply' methods on functions. */,
+      "strictPropertyInitialization": true /* Enable strict checking of property initialization in classes. */,
+      "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
+      "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
+  
+      /* Additional Checks */
+      "noUnusedLocals": true /* Report errors on unused locals. */,
+      "noUnusedParameters": true /* Report errors on unused parameters. */,
+      "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+      "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+      "noUncheckedIndexedAccess": true /* Include 'undefined' in index signature results */,
+  
+      /* Module Resolution Options */
+      "baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
+      "paths": {
+        "@/*": ["src/*"]
+      },
+      "skipLibCheck": true /* Skip type checking of declaration files. */,
+      "forceConsistentCasingInFileNames": true,
+  
+      "resolveJsonModule": true,
+
       "moduleResolution": "Node",
       "esModuleInterop": true,
       "lib": ["ESNext"],
       "types": ["node", "jest"],
       "outDir": "dist"
     },
-    "include": ["src"]
+    "include": ["src/**/*.ts", "types/**/*.d.ts"],
+    "exclude": ["node_modules"]
   }
