--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   ],
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "run-p build:*",
+    "buildx": "run-p build:*",
     "build:common": "tsc",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -51,7 +52,18 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.upperfirst": "^4.3.1",
+    "rollup": "^2.35.1",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "engines": {
     "node": ">=14"
