--- a/package.json
+++ b/package.json
@@ -1,41 +1,96 @@
 {
   "name": "dodai",
-  "version": "0.0.4",
-  "description": "",
+  "version": "2.1.7",
+  "description": "Minimal and Tiny Javascript Library for Modal Dialog",
   "main": "dist/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
-  "bin": {
-    "dodai": "dist/bin/index.js"
-  },
+  "types": "types/index.d.ts",
+  "module": "dist/index.esm.js",
+  "browser": "dist/minimal-modal.js",
   "files": [
+    "package.json",
+    "README.md",
+    "LICENSE",
+    "types",
     "dist"
   ],
+  "keywords": [
+    "front-end",
+    "modal",
+    "dialog",
+    "vanillajs",
+    "typescript"
+  ],
+  "author": {
+    "name": "yuki0410",
+    "url": "https://twitter.com/yuki0410_"
+  },
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "run-p build:*",
-    "build:common": "tsc",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "test": "jest"
+    "build": "rollup -c",
+    "lint": "eslint src/**/*.ts",
+    "format": "eslint --fix src/**/*.ts",
+    "lint-staged": "lint-staged",
+    "start": "browser-sync start --config \"./.bs-config.js\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trysd/npm-dodai.git"
+    "url": ""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/trysd/npm-dodai/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/trysd/npm-dodai#readme",
+  "homepage": "",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.(html,css)": [
+        "prettier --write",
+        "git add"
+      ],
+      "*.(ts,tsx,js,jsx)": [
+        "prettier --write",
+        "eslint --fix",
+        "git add"
+      ]
+    },
+    "ignore": [
+      "dist/**/*"
+    ]
+  },
   "dependencies": {
-    "@types/node": "^17.0.18",
-    "ejs": "^3.1.8",
-    "fs-extra": "^11.1.0",
-    "yaml": "^2.2.1"
+    "body-scroll-lock": "^3.1.5",
+    "core-js": "^3.11.0",
+    "focus-trap": "^6.4.0",
+    "lodash.merge": "^4.6.2",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/body-scroll-lock": "^2.6.1",
+    "@types/lodash.merge": "^4.6.6",
+    "browser-sync": "^2.26.14",
+
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.upperfirst": "^4.3.1",
+    "prettier": "^2.2.1",
+    "rollup": "^2.45.2",
+    "rollup-plugin-terser": "^7.0.2",
+
     "@jest/types": "^29.3.1",
     "@types/ejs": "^3.1.1",
     "@types/fs-extra": "^9.0.13",
@@ -52,8 +107,5 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.3"
-  },
-  "engines": {
-    "node": ">=14"
   }
 }
