--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "dodai",
-  "version": "2.1.7",
-  "description": "Minimal and Tiny Javascript Library for Modal Dialog",
+  "version": "0.0.5",
+  "description": "npm module",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "module": "dist/index.esm.js",
-  "browser": "dist/minimal-modal.js",
+  "browser": "dist/dodai.js",
+  "bin": {
+    "dodai": "dist/bin/index.js"
+  },
   "files": [
     "package.json",
     "README.md",
@@ -14,16 +17,8 @@
     "dist"
   ],
   "keywords": [
-    "front-end",
-    "modal",
-    "dialog",
-    "vanillajs",
-    "typescript"
+    "dodai"
   ],
-  "author": {
-    "name": "yuki0410",
-    "url": "https://twitter.com/yuki0410_"
-  },
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -31,81 +26,57 @@
     "lint": "eslint src/**/*.ts",
     "format": "eslint --fix src/**/*.ts",
     "lint-staged": "lint-staged",
-    "start": "browser-sync start --config \"./.bs-config.js\""
+    "start": "browser-sync start --config \"./.bs-config.js\"",
+    "test": "jest",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/trysd/npm-dodai.git"
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/trysd/npm-dodai/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/trysd/npm-dodai#readme",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
-  "lint-staged": {
-    "linters": {
-      "*.(html,css)": [
-        "prettier --write",
-        "git add"
-      ],
-      "*.(ts,tsx,js,jsx)": [
-        "prettier --write",
-        "eslint --fix",
-        "git add"
-      ]
-    },
-    "ignore": [
-      "dist/**/*"
-    ]
-  },
-  "dependencies": {
-    "body-scroll-lock": "^3.1.5",
-    "core-js": "^3.11.0",
-    "focus-trap": "^6.4.0",
-    "lodash.merge": "^4.6.2",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.2.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/body-scroll-lock": "^2.6.1",
-    "@types/lodash.merge": "^4.6.6",
-    "browser-sync": "^2.26.14",
-
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "lodash.camelcase": "^4.3.0",
-    "lodash.upperfirst": "^4.3.1",
-    "prettier": "^2.2.1",
-    "rollup": "^2.45.2",
-    "rollup-plugin-terser": "^7.0.2",
-
     "@jest/types": "^29.3.1",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/ejs": "^3.1.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "dayjs": "^1.11.7",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
+    "lint-staged": "^10.5.4",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.upperfirst": "^4.3.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.3"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
