--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
       "pre-commit": "lint-staged"
     }
   },
+  "dependencies": {
+    "fs-extra": "^11.1.0",
+    "tslib": "^2.4.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
@@ -72,6 +76,7 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-external-globals": "^0.7.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
