--- a/data/zumen/.github/workflows/release=release.yml
+++ b/data/zumen/.github/workflows/release=release.yml
@@ -47,7 +47,7 @@ jobs:
 
       # Publish to npm
       - name: publish-to-npm
-        run: npm publish
+        run: npm install && npm run build && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
